[fixed]优化项目结构

--- a/config.yaml
+++ b/config.yaml
@@ -6,7 +6,7 @@ mysql:
   path: 127.0.0.1
   port: "3306"
   config: charset=utf8mb4&parseTime=True&loc=Local
-  db-name: 'gin_project'
+  db-name: 'cpm'
   username: root
   password: '7823125.'
   max-idle-conns: 10
